<resources>
    <string name="app_name">呱呱物联</string>
    <string name="ensure">确定</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="action_refresh">刷新</string>
    <string name="action_reset">复位</string>
    <string name="action_set_chain">连锁</string>
    <string name="action_video">视频</string>
    <string name="action_net">网络</string>
    <string name="action_search">设备</string>
    <string name="action_sort">排序</string>
    <string name="action_set">设置</string>
    <string name="action_upload">上传</string>
    <string name="action_download">下载</string>
    <string name="action_exit">退出</string>
    <string name="move_up">上移</string>
    <string name="move_down">下移</string>
    <string name="act_add">添加</string>
    <string name="net_add_input">手动添加网络</string>
    <string name="net_add_auto">自动配置网络</string>
    <string name="title_activity_net">网络</string>
    <string name="empty_disallow">内容不能为空</string>
    <string name="net_already_here">网点已存在</string>
    <string name="net_name">网点名称</string>
    <string name="ip">ip地址</string>
    <string name="port">端口号</string>
    <string name="title_activity_search">搜索设备</string>
    <string name="rename">重命名</string>
    <string name="alias">位号</string>
    <string name="delete">删除</string>
    <string name="set_to_remote">设为远程模式</string>
    <string name="set_to_local">设为本地模式</string>
    <string name="search_max_min">查询标定值</string>
    <string name="set_max">设置最大值</string>
    <string name="no_feedback">无反馈信息</string>
    <string name="update_success">更新成功</string>
    <string name="illegal_message">条非法信息</string>
    <string name="name_repeat">名称重复</string>
    <string name="title_activity_child_electrical">子设备</string>
    <string name="title_activity_choose_electrical">选择子设备</string>
    <string name="input_or_choose_name">输入名称</string>
    <string name="title_activity_web_link">连锁</string>
    <string name="title_activity_chain">连锁</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_username">用户名</string>
    <string name="prompt_group_id">组名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_main3">液位计</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_sort">排序</string>
    <string name="title_activity_child_loop">循环</string>
    <string name="title_activity_event">子条件</string>
    <string name="title_activity_event_handler">条件</string>
    <string name="title_activity_child_chain">连锁</string>
    <string name="title_activity_child_timing">定时</string>
    <string name="title_activity_timer">定时时间</string>
    <string name="title_activity_duration">时长设置</string>
    <string name="title_activity_duration_list">时长</string>
    <string name="title_activity_system_set">设置</string>
    <string name="title_activity_esptouch">配置网络</string>

    <string name="calibration">标定</string>
    <string name="formula">f(A)</string>
    <string name="value_hint">0</string>
    <string name="collect_setting_note">注:A为测量信号</string>

    <string name="four">4</string>
    <string name="twenty">20</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="error_configuration">请先设置串口参数.</string>
    <string name="error_security">没有读写串口的权限.</string>
    <string name="error_unknown">串口打不开.</string>
    <string name="title_activity_settings2">设置</string>

    <string name="pref_title_ctrl_ring">操作提示音</string>

    <string name="quality_hd">高清</string>
    <string name="quality_balanced">均衡</string>
    <string name="quality_flunet">流畅</string>
    <string name="remoteplayback_over_link">设备连接数过大，停止其他连接后再试试吧</string>
    <string name="remoteplayback_connect_server_error">连接服务器失败，请重试</string>
    <string name="remoteplayback_connect_device_error">播放中断，请重试</string>
    <string name="realplay_fail_connect_device">播放失败，连接设备异常</string>
    <string name="realplay_fail_device_not_exist">设备不在线</string>
    <string name="realplay_play_fail">视频播放失败</string>
    <string name="camera_lens_too_busy">镜头转动中，请稍候</string>
    <string name="ptz_is_preseting">镜头转动中，请稍候</string>
    <string name="ptz_control_timeout_cruise_track_failed">轨迹巡航中，请稍候</string>
    <string name="ptz_preset_invalid_position_failed">当前位置已被删除，请返回刷新</string>
    <string name="ptz_preset_current_position_failed">当前就在这个位置哦</string>
    <string name="ptz_preset_sound_localization_failed">听声辨位中，请稍候</string>
    <string name="ptz_operation_too_frequently">操作太频繁啦，先歇歇吧</string>
    <string name="ptz_preset_exceed_maxnum_failed">已经不能收藏更多了</string>
    <string name="ptz_privacying_failed">镜头已遮蔽，无法操作云台</string>
    <string name="ptz_mirroring_failed">语音对讲中，无法操作云台</string>
    <string name="ptz_operation_failed">操作失败</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_list_dev_show_type_names">
        <item>宫格</item>
        <item>列表</item>
    </string-array>
    <string-array name="pref_list_dev_show_type_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string-array name="pref_list_dev_name_show_type_names">
        <item>名称</item>
        <item>位号</item>
    </string-array>
    <string-array name="pref_list_dev_name_show_type_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>
