<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="155dp"
    android:background="@drawable/preview_selection_bg"
    android:orientation="vertical"
    android:gravity="center">

    <Button
        android:id="@+id/quality_hd_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/quality_hd"
        android:textColor="@color/quality_color_selector"
        android:textSize="@dimen/realplay_text_size" />

    <Button
        android:id="@+id/quality_balanced_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quality_balanced"
        android:textColor="@color/quality_color_selector"
        android:textSize="@dimen/realplay_text_size" 
        android:background="@android:color/transparent" />
    
    <Button
        android:id="@+id/quality_flunet_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quality_flunet"
        android:layout_marginBottom="10dp"
        android:textColor="@color/quality_color_selector"
        android:textSize="@dimen/realplay_text_size" 
        android:background="@android:color/transparent" />
</LinearLayout>